Fixes to how we construct an isolated ClassLoader, so that XML APIs are useable from the ClassLoader when a JAXP implementation is present in the application classpath: - Renamed ClassLoaderFactory to ClassLoaderRegistry - Added ClassLoaderFactory to encapsulate ClassLoader construction - Changed various places that need an isolated ClassLoader to use this factory

--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     // tried with scope 'runtime' but this gives a cyclic task dependency
     testRuntime project(":coreImpl")
+    testRuntime 'xerces:xercesImpl:2.9.1'
 
     testCompile libraries.xmlunit
 
