--- a/subprojects/docs/src/samples/userguide/tutorial/pluginConvention/build.gradle
+++ b/subprojects/docs/src/samples/userguide/tutorial/pluginConvention/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'java'
 
 task show << {
-    sourceSets.main.classesDir = new File(buildDir, 'output')
-    println relativePath(processResources.destinationDir)
+    sourceSets.main.classesDir = new File(buildDir, 'output/classes')
+    sourceSets.main.resourcesDir = new File(buildDir, 'output/resources')
+
     println relativePath(compileJava.destinationDir)
+    println relativePath(processResources.destinationDir)
 }
