--- a/subprojects/docs/src/samples/userguide/tutorial/pluginConvention/build.gradle
+++ b/subprojects/docs/src/samples/userguide/tutorial/pluginConvention/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'java'
 
 task show << {
-    sourceSets.main.classesDir = new File(buildDir, 'output/classes')
-    sourceSets.main.resourcesDir = new File(buildDir, 'output/resources')
+    sourceSets.main.output.classesDir = new File(buildDir, 'output/classes')
+    sourceSets.main.output.resourcesDir = new File(buildDir, 'output/resources')
 
     println relativePath(compileJava.destinationDir)
     println relativePath(processResources.destinationDir)
