@Adam, shouldn't the launcher.gradle depend on jna (compile-time)? For some reason the build works ok without it but compilation fails in IDEA for me.

--- a/subprojects/launcher/launcher.gradle
+++ b/subprojects/launcher/launcher.gradle
@@ -7,6 +7,8 @@ dependencies {
     compile project(':ui')
     compile project(':toolingApi')
 
+    compile 'net.java.dev.jna:jna:3.2.2'
+
     compile libraries.slf4j_api
 
     testCompile project(path: ':core', configuration: 'testFixtures')
