Temporary fix to allow generating idea for core-impl project. For some reason, both eclipse and idea plugins fail to process those files (they fail on an attempt to download sources / javadocs).

--- a/subprojects/core-impl/core-impl.gradle
+++ b/subprojects/core-impl/core-impl.gradle
@@ -15,3 +15,10 @@ dependencies {
     testCompile libraries.junit
     testCompile project(path: ':core', configuration: 'testFixtures')
 }
+
+idea {
+    module {
+        downloadSources = false
+        downloadJavadoc = false
+    }
+}
