--- a/subprojects/wrapper/wrapper.gradle
+++ b/subprojects/wrapper/wrapper.gradle
@@ -25,12 +25,14 @@ dependencies {
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
 
+sourceSets.main.output.dirs(generated: "$buildDir/generated-resources/main")
+
 task wrapperJar(type: Jar) {
     dependsOn compileJava, processResources
     from sourceSets.main.classesDir
     include 'org/gradle/wrapper/**'
     archiveName = 'gradle-wrapper.jar'
-    destinationDir = sourceSets.main.classesDir
+    destinationDir = sourceSets.main.output.dirs.generated
     manifest.mainAttributes("Main-Class": 'org.gradle.wrapper.GradleWrapperMain')
 }
 
