Fixed the deprecation warnings in our own build. Deprecated sourceSet.xxx.classesDir in favor of sourceSet.xxx.output.classesDir (still pending fixing deprecation in the code itself).

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -12,8 +12,8 @@ configurations {
 
 sourceSets {
     integTest {
-        compileClasspath = sourceSets.main.classes + sourceSets.test.classes + configurations.integTestCompile
-        runtimeClasspath = classes + compileClasspath + configurations.integTestRuntime
+        compileClasspath = sourceSets.main.output + sourceSets.test.output + configurations.integTestCompile
+        runtimeClasspath = output + compileClasspath + configurations.integTestRuntime
     }
 }
 
@@ -34,7 +34,7 @@ rootProject.integTests << integTestTasks
 
 integTestTasks.all {
     dependsOn ':intTestImage'
-    testClassesDir = sourceSets.integTest.classesDir
+    testClassesDir = sourceSets.integTest.output.classesDir
     classpath = sourceSets.integTest.runtimeClasspath
     testSrcDirs = []
     jvmArgs '-XX:+HeapDumpOnOutOfMemoryError'
