--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -70,8 +70,8 @@ dependencies {
 
     integTestCompile libraries.jetty_depends
 
-    testFixtures sourceSets.test.classes, sourceSets.main.classes
-    integTestFixtures sourceSets.integTest.classes
+    testFixtures sourceSets.test.output, sourceSets.main.output
+    integTestFixtures sourceSets.integTest.output
 }
 
 sourceSets.main.output.dirs(generated: "$buildDir/generated-resources/main")
