--- a/subprojects/plugins/plugins.gradle
+++ b/subprojects/plugins/plugins.gradle
@@ -38,7 +38,7 @@ dependencies {
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
-    testFixtures sourceSets.test.classes
+    testFixtures sourceSets.test.output
 }
 
 sourceSets.main.output.dirs(generated: "$buildDir/generated-resources/main")
