Changed core project's testFixtures publication so that the runtime dependencies are made available to those projects using the fixtures.

--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -70,7 +70,7 @@ dependencies {
 
     integTestCompile libraries.jetty_depends
 
-    testFixtures sourceSets.test.output, sourceSets.main.output
+    testFixtures sourceSets.test.output, sourceSets.main.output, project(':coreImpl')
     integTestFixtures sourceSets.integTest.output
 }
 
