--- a/subprojects/maven/maven.gradle
+++ b/subprojects/maven/maven.gradle
@@ -45,3 +45,10 @@ dependencies {
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
+
+idea {
+    module {
+        downloadSources = false
+        downloadJavadoc = false
+    }
+}
