--- a/init.gradle
+++ b/init.gradle
@@ -3,10 +3,10 @@ gradle.projectsLoaded {
     rootProject.allprojects {
         buildscript {
             repositories {
-                mavenRepo(urls: 'http://repo.jfrog.org/artifactory/gradle-plugins').setChecksums('sha1')
+                mavenRepo(urls: 'http://localhost:8081/artifactory/libs-snapshot').setChecksums('sha1')
             }
             dependencies {
-                classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '2.0.2')
+                classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '2.0.x-SNAPSHOT')
             }
         }
     }
