Moved ear plugin examples out of the webapplication to a top level sample. Updated the reference. Commented out the 'withXml' part from the sample until it is fixed.

--- a/subprojects/docs/src/samples/ear/earCustomized/build.gradle
+++ b/subprojects/docs/src/samples/ear/earCustomized/build.gradle
@@ -25,7 +25,7 @@ ear {
 //      webModule("my.war", "/")  // wouldn't deploy since my.war isn't a deploy depencency
         securityRole "admin"
         securityRole "superadmin"
-        withXml { root -> new Node(root, "data-source", "my/data/source") }  // add a custom node to the XML
+//        withXml { provider -> new Node(provider.asNode(), "data-source", "my/data/source") }  // add a custom node to the XML
     }
 }
 
