--- a/subprojects/docs/src/samples/ear/earCustomized/build.gradle
+++ b/subprojects/docs/src/samples/ear/earCustomized/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 }
 
 ear {
-    appDirName = 'src/main/app'  // look for application metadata in a custom source folder
+    appDirName = 'src/main/app'  // use application metadata found in this folder
     libDirName = 'APP-INF/lib'  // put dependency libraries into APP-INF/lib inside the generated EAR;
                                 // also modify the generated deployment descriptor accordingly
     deploymentDescriptor {  // custom entries for application.xml:
