Removed “Pgp” prefix from some classes.

--- a/src/main/resources/META-INF/gradle-plugins/pgp-signing.properties
+++ b/src/main/resources/META-INF/gradle-plugins/pgp-signing.properties
@@ -1,1 +1,1 @@
-implementation-class=org.gradle.plugin.pgp.signing.PgpSigningPlugin
+implementation-class=org.gradle.plugin.pgp.signing.SigningPlugin
