--- a/subprojects/docs/src/samples/ear/earCustomized/ear/build.gradle
+++ b/subprojects/docs/src/samples/ear/earCustomized/ear/build.gradle
@@ -12,8 +12,8 @@ dependencies {
 }
 
 ear {
-    appDirName = 'src/main/app'  // use application metadata found in this folder
-    libDirName = 'APP-INF/lib'  // put dependency libraries into APP-INF/lib inside the generated EAR;
+    appDirName 'src/main/app'  // use application metadata found in this folder
+    libDirName 'APP-INF/lib'  // put dependency libraries into APP-INF/lib inside the generated EAR;
                                 // also modify the generated deployment descriptor accordingly
     deploymentDescriptor {  // custom entries for application.xml:
 //      fileName = "application.xml"  // same as the default value
