--- a/subprojects/sonar/sonar.gradle
+++ b/subprojects/sonar/sonar.gradle
@@ -38,11 +38,8 @@ sourceSets {
     }
 }
 
-ideaModule {
-    // TODO: remove everything but then-part after Gradle build has been updated to 1.0-milestone-2
-    if (scopes.PROVIDED) {
+idea {
+    module {
         scopes.PROVIDED.plus += configurations.provided
-    } else {
-        scopes.COMPILE.plus += configurations.provided
     }
 }
